2012-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* configure.in: Add AC_NO_EXECUTABLES to allow bootstrap.
	Add x86_64 to allowed cpu types.
	* configure: Regenerate.
	* config/x86_64/profile.h: New file.

2012-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (semaphore::_fixup_after_fork): Fix Win32 error output in
	api_fatal call.

2012-08-14  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* errno.cc (errmap): Keep sorted.

2012-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* mkvers.sh: Drop reference to w32api includes.

2012-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_names): Add missing ReFS entry.  Change comment.
	* mount.h (enum fs_info_type): Add comment.

2012-08-13  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* errno.cc (errmap): Map ERROR_SXS_CANT_GEN_ACTCTX to ELIBBAD.

2012-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/stat.h (struct __stat64): Drop entirely in favor of
	struct stat.  Accommodate throughout Cygwin.
	* include/cygwin/types.h: Throughout, drop current, internal types
	used since Cygwin 1.5 with the base type they have been used for.
	Throughout, define types based on bitsize-specific types where
	appropriate.  Accommodate throughout Cygwin.
	* include/sys/cygwin.h: Drop __uid32_t and __gid32_t in favor of
	uid_t and gid_t.  Define uid/gid types based on bitsize-specific types.
	(struct external_pinfo): Accommodate above change.
	* cygtls.h (struct _local_storage): Drop unused members grp and
	namearray,
	* tlsoffsets.h: Regenerate.
	* devices.h (_dev_t): Drop definition.  Use dev_t throughout instead.
	* devices.cc: Regenerate.

	Probably temporary patch to drop unneeded functionality on x86_64:
	* fcntl.cc (_fcntl): Alias to fcntl64 on x86_64.
	* glob.cc (CYGWIN_gl_stat): Simplify on x86_64.
	* grp.cc (grp32togrp16): Don't define on x86_64.
	(getgrgid): Alias to getgrgid32 on x86_64.
	(getgrnam): Alias to getgrnam32 on x86_64.
	(getgrent): Alias to getgrent32 on x86_64.