@@ -1,5 +1,14 @@
 2012-08-14  Corinna Vinschen  <corinna@vinschen.de>
 
+	* advapi32.cc (DuplicateTokenEx): Make ?: expression type-safe.
+	* ntdll.h (KAFFINITY): Don't define if building with Mingw64 headers.
+	* thread.cc: Throughout drop casts in calls to Interlocked functions.
+	* thread.h (class fast_mutex): Ditto.  Define lock_counter as LONG.
+	(class pthread_mutex): Define lock_counter as LONG.
+	(struct MTinterface): Define threadcount as LONG.
+
+2012-08-14  Corinna Vinschen  <corinna@vinschen.de>
+
 	* configure.in: Add AC_NO_EXECUTABLES to allow bootstrap.
 	Add x86_64 to allowed cpu types.
 	* configure: Regenerate.
